; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybpin.c_pin_find.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/mods/extr_pybpin.c_pin_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pin_type = common dso_local global i32 0, align 4
@pin_board_pins_locals_dict = common dso_local global i32 0, align 4
@mpexception_value_invalid_arguments = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pin_find(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @mp_obj_is_type(i32* %5, i32* @pin_type)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  store i32* %10, i32** %2, align 8
  br label %21

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32* @pin_find_named_pin(i32* @pin_board_pins_locals_dict, i32* %12)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32*, i32** %4, align 8
  store i32* %17, i32** %2, align 8
  br label %21

18:                                               ; preds = %11
  %19 = load i32, i32* @mpexception_value_invalid_arguments, align 4
  %20 = call i32 @mp_raise_ValueError(i32 %19)
  br label %21

21:                                               ; preds = %18, %16, %8
  %22 = load i32*, i32** %2, align 8
  ret i32* %22
}

declare dso_local i64 @mp_obj_is_type(i32*, i32*) #1

declare dso_local i32* @pin_find_named_pin(i32*, i32*) #1

declare dso_local i32 @mp_raise_ValueError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
